--- a/client/modules/Kanban/Kanban.css
+++ b/client/modules/Kanban/Kanban.css
@@ -1,1 +1,13 @@
-/* Kanban styles */
+.kanban {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.addLane {
+  color: #fff;
+  background-color: dodgerblue;
+  padding: 8px 16px;
+  font-size: 18px;
+}
