--- a/client/modules/Lane/Lane.css
+++ b/client/modules/Lane/Lane.css
@@ -1,1 +1,44 @@
-/* Lane styles */
+.Lane {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 250px;
+  text-align: center;
+  background-color: #ccc;
+  margin: 0 5px;
+}
+
+.Lane .LaneHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.LaneAddNote {
+  margin: 0 5px;
+}
+
+.LaneAddNote button {
+  background-color: #fff;
+  padding: 4px 8px;
+  font-size: 15px;
+  margin-top: 5px;
+}
+
+.LaneHeader h4 {
+  font-size: 24px;
+  text-align: center;
+  padding: 10px;
+}
+
+.LaneDelete {
+  margin: 0 5px;
+}
+
+.LaneDelete button {
+  color: #fff;
+  background-color: red;
+  padding: 4px 8px;
+  font-size: 15px;
+  margin-top: 5px;
+}
